<resources>
    <string name="app_name">E-Learning</string>
    <string name="a_plus">A+</string>
    <string name="education_app">Education\n App</string>
    <string name="welcome_to_n_educora">Welcome to\n Educora.</string>
    <string name="login_as_a">Login as a</string>
    <string name="student">Student</string>
    <string name="doctor">Doctor</string>
    <string name="create_an_a">Create an Account</string>
    <string name="a_handful_o">A handful of model sentence structures</string>
    <string name="username">Username</string>
    <string name="email_id">Email id</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="required">Required</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="forgot_password"><br><br><b><i><u>Forgot Password?</u></i></b></br></br></string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? Sign up</string>
    <string name="add_material">Add Material</string>
    <string name="create_new_course">Create New\nCourse</string>
    <string name="enter_course_name">Enter course name</string>
    <string name="grade">Grade</string>
    <string name="project_grade">Project Grade</string>
    <string name="attendance">Attendance</string>
    <string name="confirm_to_create_new_course">Confirm to create new course</string>
    <string name="enter_course_id">Enter course id</string>
    <string name="doctor_control_page">Doctor control page</string>
    <string name="generate_code_to_attendance">Generate code to attendance</string>
    <string name="open">Open</string>
    <string name="quiz">Quiz</string>
    <string name="create_new_quiz">Create new quiz</string>
    <string name="material">Material</string>
    <string name="upload_material">Upload material</string>
    <string name="grades">Grades</string>
    <string name="show_grades">Show grades</string>
    <string name="course_code">Course code</string>
    <string name="generate_code">Generate Code</string>
    <string name="confirm">Confirm</string>
    <string name="create_quiz">Create quiz</string>
    <string name="enter_question">Enter question</string>
    <string name="choose_one">Choose one</string>
    <string name="choose_two">Choose two</string>
    <string name="choose_three">Choose three</string>
    <string name="next_question">Next question</string>
    <string name="upload_assignment">Upload assignment</string>
    <string name="upload_pdf">Upload pdf</string>
    <string name="upload">Upload</string>
    <string name="solve_quiz">Solve Quiz</string>
    <string name="chats">Chats</string>
    <string name="active">Active</string>
    <string name="code_attendance">Code attendance</string>
    <string name="your_grade_in_quiz">Your Grade In Quiz</string>
    <string name="_0">0</string>
    <string name="on">/</string>
    <string name="number_of_times_of_attendance">Number of times of attendance</string>
    <string name="quizzes">Quizzes</string>
    <string name="chat">Chat</string>
    <string name="message">Message</string>
    <string name="password">Password</string>

</resources>