<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    android:padding="12dp"
    tools:context=".ui.get_start.GetStartActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/hero"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_n_educora"
        android:textColor="@color/light"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_as_a"
        android:textColor="@color/light"
        android:textSize="@dimen/text_24"
        android:layout_marginTop="@dimen/space_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/guideline2"
        android:text="@string/student"
        android:textColor="@color/light"
        android:background="@drawable/background_select"
        android:padding="@dimen/space_16"
        android:textSize="@dimen/text_24"
        android:gravity="center"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/doctor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/student"
        android:layout_marginTop="4dp"
        android:text="@string/doctor"
        android:textColor="@color/light"
        android:background="@drawable/background_select"
        android:padding="@dimen/space_16"
        android:textSize="@dimen/text_24"
        android:gravity="center"/>
</androidx.constraintlayout.widget.ConstraintLayout>